# liballo

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: pr-check.yml
benchmarks/: bench_allocators.c  meson.build
examples/: meson.build
examples/heap-arena/: main.c  meson.build
include/: allo.h  allo_asan.h  allo_assert.h  allo_mem.h  asan.h
scripts/: coverage.sh  fuzz.sh
src/: allo.c  allo_arena.c  allo_buddy.c  allo_buffer.c  allo_fallback.c  allo_gen.c  allo_libc.c  allo_mem.c  allo_mtx.c  allo_page.c  allo_page_posix.c  allo_page_posix.h  allo_page_x86.c  allo_page_x86.h  allo_pool.c  allo_utils.c  meson.build
subprojects/: linux-syscall-support.wrap
subprojects/packagefiles/linux-syscall-support/: meson.build
subprojects/packagefiles/ubench/: meson.build
tests/: fuzz_allocator.c  meson.build  test_arena.c  test_buddy.c  test_buffer.c  test_buffer_validation.c  test_c.c  test_calloc.c  test_common.c  test_fallback.c  test_gen.c  test_harness.h  test_mtx.c  test_page.c  test_page_nostdlib.c  test_pool.c  test_realloc.c
